--- a/frontend/index.html
+++ b/frontend/index.html
@@ -117,8 +117,8 @@
 
     <script>
         // --- API & GLOBAL CONFIG ---
-        const API_PREDICT_URL = "http://127.0.0.1:8000/predict_price"; 
-        const API_SUGGESTIONS_BASE_URL = "http://127.0.0.1:8000/get_suggestions";
+        const API_PREDICT_URL = "https://house-price-prediction-model-and-real.onrender.com/predict_price"; 
+        const API_SUGGESTIONS_BASE_URL = "https://house-price-prediction-model-and-real.onrender.com/get_suggestions";
         const POLLING_INTERVAL = 2000;
         const PORTFOLIO_URL = "https://bhaumik-yadav.vercel.app/";
 
